client/js/components/instagram/instagram-style.scss
$instagram-border-color: rgba(0, 0, 0, 0.3);
$instagram-border: 1px solid $instagram-border-color;
$instagram-text-shadow: 0 2px 1px white;

.instagram {
  background-color: white;
  box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
  border: $instagram-border;
  border-radius: 1px;
  font-size: 90%;
  margin: 5px auto;
  position: relative;
  width: 100%;

  @include desktop {
    width: $fixed-post-width;
  }
}

.instagram-details {
  display: block;
  width: 200px;
  left: -220px;
  position: absolute;
  text-align: right;
}

.instagram-user-image {
  border: $instagram-border;
  float: right;
  margin-left: 10px;
  width: 40px;
}

.instagram-username {
  font-weight: 700;
  text-shadow: $instagram-text-shadow;
}

.instagram-detail {
  text-shadow: $instagram-text-shadow;
  color: $font-secondary;
  font-weight: 700;
}

.instagram-image {
  display: block;
  width: 100%;
}

.instagram-interaction {
  border-top: $instagram-border;
  border-bottom: $instagram-border;
  background: linear-gradient(to bottom, #F6F7F8 0%, #DDDDDD 100%);
  text-align: center;
}

.instagram-like.fa {
  $text-border-color: rgba(0, 0, 0, 0.2);
  border-right: $instagram-border;
  color: #999999;
  display: block;
  float: left;
  font-size: 200%;
  padding: 5px;
  //text-shadow: 0 0 1px black;
  width: 48px;
}

.instagram-actions.fa {
  border-left: $instagram-border;
  color: #999999;
  display: block;
  float: right;
  font-size: 200%;
  padding: 5px;
  //text-shadow: 0 0 1px black;
  width: 48px;
}

.instagram-activity {
  display: block;
  margin: 0 52px;
  padding: 10px 10px 0 10px;
  text-align: left;
  width: calc(100% - 96px);

  a {
    @extend .instagram-comment-username;
  }
}

.instagram-message {
  padding: 10px 0;
  border-bottom: $instagram-border;
}

.instagram-comment {
  width: 100%;
  margin-bottom: 10px;

  &:first-child {
    margin-top: 10px;
  }
}

.instagram-comment-user-image {
  border: $instagram-border;
  box-sizing: content-box;
  float: left;
  margin: 0 11px;
  vertical-align: top;
  width: 24px;
}

.instagram-comment-right {
  display: table-cell;
  padding: 3px 0;
}

.instagram-comment-username {
  @extend .instagram-username;
}

